--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@inlet/react-pixi": "^6.8.0",
     "@pixi/react": "^7.1.2",
-    "pixi.js": "^8.1.0",
+    "pixi.js": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.23.1",
+    "react-spring": "^9.7.3",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
