--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@inlet/react-pixi": "^6.8.0",
     "@pixi/react": "^7.1.2",
+    "@pixi/react-animated": "^7.1.3",
     "pixi.js": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
